# pdf_parsing_AI

./: .env  .gitignore  README.md  agent.py  converexcel.py  json_Csv.py  main.py  output.csv  output.xlsx  pdf_finder.py  pyproject.toml  requirement.txt
